package edu.fiuba.algo3.modelo;

public interface ObjetoRobado {
    String mostrarNombre();

    Ciudad ciudad();

    String rareza();

    int cantidadPaises();
}
