@startuml
title Jerarquia de la interfaz "ObjetoRobado"
interface ObjetoRobado{
    + {static} crearPoliciaConCiudadInicial(grado) : Policia
    + rareza() : String
    + cantidadDePaises() : int
    + verificarLimitePaises(cantPaisesVisitados) : Ciudad
    + rutaLadron(nomCiudades[String], ciudades[Ciudad], dado, rutaLadron) : [Ciudad]
}

class ObjetoComun{

}
class ObjetoValioso{

}
class ObjetoMuyValioso{

}

ObjetoRobado <|.. ObjetoComun
ObjetoRobado <|.. ObjetoValioso
ObjetoRobado <|.. ObjetoMuyValioso

@enduml